News
====

0.1
---

*Release date: 21-Mar-2013*

* Initial release
 
0.1.1
-----

*Release date: 29-Mar-2013*

* Release to PyPI

* Results returned as lists

* print(_) to get table form in text console

* set autolimit and text wrap in configuration

 
0.1.2
-----

*Release date: 29-Mar-2013*

* Python 3 compatibility

* use prettyprint package